deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello2-1-dp
  labels:
    app: hello-dp
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: hello-1
  template:
    metadata:
      name: hello-template
      labels:
        app: hello-1
    spec:
      containers:
      - name: hello-cont
        image: soso349/hello1:1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cluster-ip-v1
spec:
  selector:
    app: hello-1
  ports:
    - protocol: TCP
      port:  80
      targetPort:  8000
