ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: kubervm.internal
    http:
      paths:
      - path: /hello1
        pathType: Exact
        backend:
          service:
            name: hello-cluster-ip-v1
            port:
              number: 80  
      - path: /hello2
        pathType: Exact
        backend:
          service:
            name: hello-cluster-ip-v2
            port:
              number: 80
